fixed overflow by removing duplicate rules

--- a/styles.css
+++ b/styles.css
@@ -56,7 +56,6 @@ html{
 }
 
 body{
-    overflow: hidden;
 
     margin: 0;
     display: flex;
@@ -292,10 +291,7 @@ canvas{
 }
 
 @media all and(min-width:1101px){
-body{
-        overflow: scroll;
-                height: 100%;
-}
+
     .forecast:hover{
         scale: 1.5;
         cursor: pointer;
@@ -306,8 +302,6 @@ body{
 
 @media all and (max-width:1100px){
     body{
-        overflow: scroll;
-
         margin: 0;
         display: flex;
         flex-direction: column;
